--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@angular/ssr": "^17.0.3",
     "@types/cors": "^2.8.17",
     "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "firebase": "^10.8.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
