--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.3",
+    "@swimlane/ngx-charts": "^20.5.0",
     "@types/cors": "^2.8.17",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
+    "chart.js": "^4.4.2",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "firebase": "^10.8.1",
