--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "firebase": "^10.8.1",
+    "nodemon": "^3.1.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.6",
     "tslib": "^2.3.0",
